buncha shit added

--- a/views/partials/filter.ejs
+++ b/views/partials/filter.ejs
@@ -3,7 +3,7 @@
 
         <!-- Dropdown menu for Alcohol type -->
         <div class="mb-3">
-            <label for="Alcohol" class="col-sm-6 col-form-label col-form-label-sm">Should alcohol be included?</label>
+            <label for="Alcohol" class="text-light col-sm-6 col-form-label col-form-label-sm">Should alcohol be included?</label>
             <div class="col-sm-6">
                 <select name="alcohol" id="Alcohol" class="form-select">
                     <option selected>Choose an option</option>
@@ -18,7 +18,7 @@
         
         <!-- Dropdown menu for Category -->
         <div class="mb-3">
-            <label for="Category" class="col-sm-2 col-form-label col-form-label-sm">Category</label>
+            <label for="Category" class="text-light col-sm-2 col-form-label col-form-label-sm">Category</label>
             <div class="col-sm-6">
                 <select name="category" id="Category" class="form-select">
                     <option selected>Choose a category</option>
@@ -33,7 +33,7 @@
 
          <!-- Dropdown menu for Glass type -->
          <div class="mb-3">
-            <label for="Alcohol" class="col-sm-6 col-form-label col-form-label-sm">Glass</label>
+            <label for="Alcohol" class="text-light col-sm-6 col-form-label col-form-label-sm">Glass</label>
             <div class="col-sm-6">
                 <select name="glass" id="Glass" class="form-select">
                     <option selected>Choose a glass</option>
@@ -48,7 +48,7 @@
 
         <!-- Dropdown menu for ingredients -->
         <div class="mb-3">
-            <label for="Ingredient" class="col-sm-2 col-form-label col-form-label-sm">Ingredient</label>
+            <label for="Ingredient" class="text-light col-sm-2 col-form-label col-form-label-sm">Ingredient</label>
             <div class="col-sm-6">
                 <select name="ingredient" id="Ingredient" class="form-select">
                     <option selected>Choose an ingredient</option>
