--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/styles/index.css">
     <title>API Capstone</title>
 </head>
-<body>
-    <header class="d-flex flex-wrap justify-content-center py-3 ms-5 mb-4 border-bottom">
+<body class="magicpattern">
+    <header class="d-flex flex-wrap justify-content-center py-3 mx-5 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4">Tonights Drink</span>
+        <span class="fs-4 text-light">Tonights Drink</span>
       </a>
     </header>
